# openvivoe

./: $  .gitignore  <  CMakeLists.txt  FindNetSnmp.cmake  README.md  _config.yml  config.h.cmake  debug_gst  index.html  pipeline.dot  serve.sh  test  test2  vivoe-mib.conf  w
_posts/: 2016-03-22-welcome-to-jekyll.markdown
_site/: feed.xml  index.html
_site/about/: index.html
_site/assets/css/: styles.css
_site/conf/: vivoe-mib.conf_old
_site/doc/html/: annotated.html  channelNumber_8c_source.html  channelNumber_8h_source.html  channelReset_8c_source.html  channelReset_8h_source.html  channelTable_8c_source.html  channelTable_8h_source.html  classes.html  conflict__detection_8c_source.html  conflict__detection_8h_source.html  daemon_8c_source.html  daemon_8h_source.html  detect_8c_source.html  detect_8h_source.html  deviceDesc_8c_source.html  deviceDesc_8h_source.html  deviceError_8c_source.html  deviceError_8h_source.html  deviceFirmwareVersion_8c_source.html  deviceFirmwareVersion_8h_source.html  deviceHardwareVersion_8c_source.html  deviceHardwareVersion_8h_source.html  deviceManufacturer_8c_source.html  deviceManufacturer_8h_source.html  deviceMibVersion_8c_source.html  deviceMibVersion_8h_source.html  deviceMode_8c_source.html  deviceMode_8h_source.html  deviceNatoStockNumber_8c_source.html  deviceNatoStockNumber_8h_source.html  devicePartNumber_8c_source.html  devicePartNumber_8h_source.html  deviceReset_8c_source.html  deviceReset_8h_source.html  deviceSerialNumber_8c_source.html  deviceSerialNumber_8h_source.html  deviceSoftwareVersion_8c_source.html  deviceSoftwareVersion_8h_source.html  deviceType_8c_source.html  deviceType_8h_source.html  (+116 more)
_site/doc/latex/: annotated.tex  dir_22f3d1e317347c7a220cecb5b31d4022.tex  dir_2b24b6acc0bcd3a2b07b77bdad4017dd.tex  dir_2f13b0e4b2ea34d99b1f8efdad85d7ab.tex  dir_35fc65db9b6575c7d8fd3f823b20192d.tex  dir_3af6758882fed5e4921a120e5f0255f4.tex  dir_405f8cffb38cb766777fbc619e0a81e1.tex  dir_4f2e652f092a46a56b5843d69938bf8a.tex  dir_5078fa4b037495af7f2183084da91e6b.tex  dir_5fd4b698fb566ea633d0715fe39ad33f.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  (+34 more)
conf/: README  snmp.conf  snmpd.conf  vivoe-mib.conf  vivoe-stream.conf
doc/: Doxyfile  Doxyfile.in
example/: assignedIP.conf  camera_ctl.conf  redirection.conf  roi.conf  vivoe-mib.conf
include/: daemon.h  deamon.h  handler.h  ip_assignment.h  log.h  macro.h  mibParameters.h  multicast.h
include/announcement/: gstreamer_function.h  sap.h  sdp.h
include/channelControl/: channelNumber.h  channelReset.h  channelTable.h
include/conf/: config.h  mib-conf.h  stream-conf.h
include/deviceInfo/: deviceManufacturer.h  deviceMode.h  deviceSerialNumber.h  ethernetIfTable.h
include/streaming/: detect.h  filter.h  gstvivoecrop.h  name.h  pipeline.h  roi.h  sdp.h  stream.h  stream_registration.h
include/trap/: deviceError.h  ipAddressConflict.h
include/videoFormatInfo/: videoFormatTable.h
include/vivoe_ip/: conflict_detection.h  ip_assignment.h
mib_module/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deviceType  ethernetIfTable.c  ethernetIfTable.h  mib_module.cbp  mib_module.layout  mib_module.project  mib_module.workspace  nstAgentSubagentObject  tags  vivoe-mib.conf
mib_module/.codelite/: compilation.db  mib_module.session  mib_module.tags  mib_module.workspace.someone  refactoring.db
mib_module/conf/: vivoe-mib.conf
mib_module/include/: config.h  deviceDesc.h  devicePartNumber.h  deviceType.h  deviceUserDesc.h  ethernetIfIpAddress.h  ethernetIfIpAddressConflict.h  ethernetIfSpeed.h  ethernetIfSubnetMask.h  ethernetIfTable.h  mibParameters.h  nstAgentSubagentObject.h  videoFormatNumber.h
mib_module/include/deviceInfo/: deviceFirmwareVersion.h  deviceHardwareVersion.h  deviceMibVersion.h  deviceNatoStockNumber.h  deviceReset.h  deviceSoftwareVersion.h  ethernetIfNumber.h
mib_module/include/videoFormatInfo/: videoFormatTable.h
mib_module/src/: config.c  deviceDesc.c  deviceFirmwareVersion.c  deviceHardwareVersion.c  deviceManufacturer.c  deviceMibVersion.c  deviceMode.c  deviceNatoStockNumber.c  devicePartNumber.c  deviceReset.c  deviceSerialNumber.c  deviceSoftwareVersion.c  deviceType.c  deviceUserDesc.c  ethernetIfIpAddress.c  ethernetIfNumber.c  ethernetIfSpeed.c  ethernetIfSubnetMask.c  ethernetIfTable.c  handler.c  main.c  mysubagent  nstAgentSubagentObject.c  videoFormatNumber.c  videoFormatTable.c
mib_module/src/deviceInfo/: deviceFirmwareVersion.c  deviceHardwareVersion.c  deviceMode.c  deviceNatoStockNumber.c  devicePartNumber.c  deviceSoftwareVersion.c  deviceType.c  deviceUserDesc.c  ethernetIfTable.c
mib_module/src/videoFormatInfo/: videoFormatTable.c
old/: ethernetIfEntry.c  ethernetIfEntry.h  ethernetIfIndex.c  ethernetIfIndex.h  ethernetIfIpAddress.c  ethernetIfIpAddressConflict.c  ethernetIfMacAddress.c  ethernetIfMacAddress.h
sdp/: mp4.sdp  raw.sdp
src/: config.c  daemon.c  deamon.c  deviceError.c  ethernetiftable_init.c  handler.c  ip_assignment.c  log.c  main.c  multicast.c  notes_JRO.txt
src/announcement/: gstreamer_function.c  sap.c  sdp.c
src/channelControl/: channelNumber.c  channelReset.c  channelTable.c
src/conf/: config.c  mib-conf.c  mib-config.c  stream-conf.c
src/deviceInfo/: deviceDesc.c  deviceFirmwareVersion.c  deviceHardwareVersion.c  deviceManufacturer.c  deviceMibVersion.c  deviceMode.c  deviceNatoStockNumber.c  devicePartNumber.c  deviceReset.c  deviceSerialNumber.c  deviceSoftwareVersion.c  deviceType.c  deviceUserDesc.c  ethernetIfNumber.c  ethernetIfTable.c
src/streaming/: .pipeline.c.swo  detect.c  filter.c  gstvivoecrop.c  pipeline.c  roi.c  sdp.c  stream.c  stream_registration.c
src/trap/: deviceError.c  ipAddressConflict.c
src/videoFormatInfo/: videoFormatNumber.c  videoFormatTable.c
src/vivoe_ip/: conflict_detection.c  ip_assignment.c
streaming/: CMakeLists.txt
streaming/include/: filter.h  pipeline.h  streaming.h
streaming/sdp/: mp4.sdp  raw.sdp
streaming/src/: .main.c.swp  filter.c  main.c  pipeline.c
temp/: gstvivoecrop.c
website/: _config.yml
(+24 files in other folders)
